--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@clerk/clerk-react": "^5.23.0",
     "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^12.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
